# BreatheLens

./: .gitignore  LICENSE  README.md  build.py  main.py  pyproject.toml
.github/workflows/: release.yml
docs/: CODE_AUDIT_2026-04-28.md
docs/i18n/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh.md
resmed_analyzer/: backend.py  edf.py  exporter.py  main.py  models.py  parser.py
tests/: test_backend_localization.py  test_ui_main_qml.py
ui/: Main.qml
